--- a/Power BI.html
+++ b/Power BI.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landing - Forty by HTML5 UP</title>
+		<title>Power BI Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -74,7 +74,9 @@
 										<h2>Data Professional Survey Dashboard</h2>
 									</header>
 									<p>A simple interactive dashboard summarises the survey conducted on hundreds of data professionals, allowing users to find the overall satisfaction and the difficulty of breaking into data based on various circumstances such as location, gender, age, occupation and industry etc.</p>
-									<iframe title="Power_BI_Data_Professional_Survey_Project" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNWQ0NGZjYzYtY2FiZi00MjUzLTk2NzYtYTkzNzA2MDI0NzJjIiwidCI6IjBkZGNkZmI1LTQxODAtNDNkNS1hYjk1LWVkZGJmYzk5NDBkZSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+									<div class="iframe-container">
+									<iframe title="Power_BI_Data_Professional_Survey_Project" src="https://app.powerbi.com/view?r=eyJrIjoiNWQ0NGZjYzYtY2FiZi00MjUzLTk2NzYtYTkzNzA2MDI0NzJjIiwidCI6IjBkZGNkZmI1LTQxODAtNDNkNS1hYjk1LWVkZGJmYzk5NDBkZSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+									</div>
 									<br></br>
 									<h3>Dataset</h3>
 									<p>The survey was conducted by YouTuber "Alex The Analyst" through different social media platforms. This dataset was acquired from his <a href="https://github.com/AlexTheAnalyst/Power-BI/blob/main/Power%20BI%20-%20Final%20Project.xlsx">GitHub repository</a>.</p>
@@ -184,14 +186,14 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<a href="#">information@untitled.tld</a>
+									<a href="#">kieran_song@hotmail.com</a>
 								</div>
 							</section>
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-phone"></span>
 									<h3>Phone</h3>
-									<span>(000) 000-0000 x12387</span>
+									<span>(+44)7455733376</span>
 								</div>
 							</section>
 							<!--
@@ -218,8 +220,8 @@
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								-->
-								<li><a href="https://github.com/s262680" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/kieran-chi-io-song-8516aa174/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/s262680" target="_blank" class="icon brands alt fa-github"><span class="label" >GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/kieran-chi-io-song-8516aa174/" target="_blank" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<!--
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
