--- a/Excel.html
+++ b/Excel.html
@@ -53,7 +53,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/Excel2.jpg" alt="" />
+								<img src="images/Excel2.JPG" alt="" />
 							</span>
 							<header class="major">
 								<h1>Excel</h1>
@@ -98,7 +98,7 @@
 									<h3>Data Cleaning And Transformation</h3>
 
 									<figure class="image fig">
-										<img src="images/Original_Data_Example.jpg" alt="" />
+										<img src="images/Original_Data_Example.JPG" alt="" />
 										<figcaption>Fig.1 - Original data example</figcaption>
 									</figure>
 									<br></br>
