--- a/Excel.html
+++ b/Excel.html
@@ -53,7 +53,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/Excel2.JPG" alt="" />
+								<img src="images/Excel2.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Excel</h1>
