--- a/Power BI.html
+++ b/Power BI.html
@@ -31,7 +31,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Power BI.html">Power BI</a></li>
-							<li><a href="#">SQL &#40;in progress&#41;</a></li> 
+							<li><a href="SQL.html">SQL</a></li> 
 							<li><a href="#">Python &#40;in progress&#41;</a></li> 
 							<li><a href="Excel.html">Excel</a></li> 
 							<!--
@@ -90,21 +90,27 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
+									<!--
 									<a href="generic.html" class="image">
+									-->
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>In Progress</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>More projects coming soon.</p>
+											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
+											-->
 										</div>
 									</div>
 								</section>
+
+								<!--
 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
@@ -139,7 +145,10 @@
 								</section>
 							</section>
 
+								-->
+
 						<!-- Three -->
+						<!--
 							<section id="three">
 								<div class="inner">
 									<header class="major">
@@ -151,7 +160,7 @@
 									</ul>
 								</div>
 							</section>
-
+						-->
 					</div>
 
 				<!-- Contact -->
