--- a/SQL.html
+++ b/SQL.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Power BI Portfolio</title>
+		<title>SQL Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Power BI.html">Power BI</a></li>
 							<li><a href="SQL.html">SQL</a></li> 
-							<li><a href="#">Python &#40;in progress&#41;</a></li> 
+							<li><a href="Python.html">Python</a></li> 
 							<li><a href="Excel.html">Excel</a></li> 
 							<!--
 							<li><a href="generic.html">Generic</a></li>
