--- a/Power BI.html
+++ b/Power BI.html
@@ -32,7 +32,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Power BI.html">Power BI</a></li>
 							<li><a href="SQL.html">SQL</a></li> 
-							<li><a href="#">Python &#40;in progress&#41;</a></li> 
+							<li><a href="Python.html">Python</a></li> 
 							<li><a href="Excel.html">Excel</a></li> 
 							<!--
 							<li><a href="generic.html">Generic</a></li>
