--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Power BI.html">Power BI</a></li>
 							<li><a href="SQL.html">SQL</a></li> 
-							<li><a href="#">Python &#40;in progress&#41;</a></li> 
+							<li><a href="Python.html">Python</a></li> 
 							<li><a href="Excel.html">Excel</a></li> 
 							<!--
 							<li><a href="generic.html">Generic</a></li>
@@ -103,7 +103,7 @@
 										<img src="images/Python.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3>Python &#40;in progress&#41;</h3>
+										<h3><a href="Python.html" class="link"></a>Python</h3>
 										<p>Web scraping, data cleaning, visualisation</p>
 									</header>
 								</article>
